// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Combobox examples AutoAutocompleteComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="auto-autocomplete-no-results"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value="Option B"
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-activedescendant="v-listbox-item-option-b"
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="true"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        
        
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples CustomFilterComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="custom-filter-no-results"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
        
        
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples DefaultComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples DisabledComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    disabled="disabled"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        disabled="disabled"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value="Option"
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        disabled="disabled"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-activedescendant="v-listbox-item-option-a"
      aria-hidden="true"
      class="v-listbox-container v-listbox-disabled"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-disabled="true"
          aria-selected="true"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option
        </li>
      </ul>
    </div>
  </div>
  <div
    class="v-input-container v-mt-8"
    style="container-type: inline-size;"
    v-input-container=""
    vmt="8"
  >
    <input
      checked="checked"
      class="v-checkbox"
      id="disabled-checkbox"
      type="checkbox"
      v-checkbox=""
    />
    <label
      class="v-label"
      for="disabled-checkbox"
      id="a-v-label-1"
      v-label=""
    >
      Mark combobox as disabled
    </label>
    
  </div>
</div>
`;

exports[`Combobox examples DisabledOptionComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-disabled="true"
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples DisplayedComboboxDocsComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-20 v-flex v-flex-col v-p-40"
    vflex=""
    vflexcol=""
    vgap="20"
    vp="40"
  >
    <div
      class="v-flex v-flex-col"
      vflex=""
      vflexcol=""
    >
      <label
        class="v-label"
        for="default-select-field"
        id="a-v-label-0"
        v-label=""
      >
        Label
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <select
          class="v-input"
          id="default-select-field"
          v-select=""
        >
          <option />
          <option
            value="1"
          >
            Option A
          </option>
          <option
            value="2"
          >
            Option B
          </option>
          <option
            value="3"
          >
            Option C
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </div>
        
      </div>
    </div>
    <nova-workshop-combobox-shared-combobox
      label="label"
    >
      <div
        class="v-combobox"
        style="--v-dropdown-menu-surface-margin-block-start: 0;"
        v-combobox=""
        v-floating-ui-container=""
      >
        <label
          class="v-label"
          for="a-v-input-0"
          id="a-v-label-1"
          v-label=""
        >
          label
        </label>
        <div
          class="v-input-container v-dropdown v-surface"
          v-floating-ui-trigger=""
          v-input-container=""
        >
          <input
            aria-autocomplete="list"
            aria-describedby="shared-combobox-no-results"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="a-v-floating-ui-element-0"
            class="v-input"
            id="a-v-input-0"
            role="combobox"
            v-input=""
            value=""
          />
          <button
            aria-haspopup="true"
            aria-label="toggle"
            buttoncolor="tertiary"
            buttonsize="small"
            class="v-button v-button-icon v-button-small v-button-tertiary"
            tabindex="-1"
            type="button"
            v-button-icon=""
          >
            <v-icon-visa-toggle
              class="v-icon v-icon-tiny"
              style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
            >
              
              <svg
                aria-hidden="true"
                class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
                focusable="false"
                height="16"
                v-icon-visa-chevron-down-tiny=""
                v-toggle-default-template=""
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  class="v-icon-primary"
                  d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                />
              </svg>
              
            </v-icon-visa-toggle>
          </button>
          
        </div>
        <div
          aria-hidden="true"
          class="v-listbox-container"
          id="a-v-floating-ui-element-0"
          role="listbox"
          style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
          v-floating-ui-element=""
          v-listbox-container=""
        >
          <ul
            class="v-listbox"
            id="a-v-listbox-0"
            role="group"
            style="max-block-size: 180px;"
            v-listbox=""
          >
            
            <li
              aria-atomic="true"
              aria-live="assertive"
              class="v-align-items-center v-flex v-flex-row v-justify-content-center v-px-7 v-py-10"
              id="shared-combobox-no-results"
              valignitemscenter=""
              vflex=""
              vjustifycontentcenter=""
              vpx="7"
              vpy="10"
            >
              <p
                class="v-typography-label-large"
                vtypography="label-large"
              >
                No results found
              </p>
            </li>
            
          </ul>
          
        </div>
      </div>
    </nova-workshop-combobox-shared-combobox>
  </div>
  <code>
    Label: null
  </code>
  <code>
    Value: null
  </code>
  <nova-workshop-example
    exampletitle="Shared combobox"
    selector="nova-workshop-combobox-shared-combobox"
  >
    <div
      class="v-flex v-flex-row v-flex-wrap v-mt-24"
      vflex=""
      vflexwrap=""
      vmt="24"
    >
      <span
        class="v-mr-auto"
        vmr="auto"
      >
        <span
          class="example-title v-typography-subtitle-1"
          vtypography="subtitle-1"
        >
          Shared combobox
        </span>
        
        
      </span>
      
      
    </div>
    <div
      class="example__content"
    >
      
      
      
      
      
    </div>
  </nova-workshop-example>
</div>
`;

exports[`Combobox examples DynamicDataSetComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="dynamic-data-no-results"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox v-listbox-scroll"
        containheight=""
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        
        <li
          aria-atomic="true"
          aria-live="assertive"
          class="v-align-items-center v-flex v-flex-row v-justify-content-center v-px-7 v-py-10"
          id="dynamic-data-no-results"
          valignitemscenter=""
          vflex=""
          vjustifycontentcenter=""
          vpx="7"
          vpy="10"
        >
          <p
            class="v-typography-label-large"
            vtypography="label-large"
          >
            No results found
          </p>
        </li>
        
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples ErrorComboboxComponent should render correctly 1`] = `
<div>
  <div
    aria-invalid="false"
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="default-error-message"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="false"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        required=""
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="v-input-message"
      id="default-error-message"
      v-input-message=""
    >
      
    </span>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
  <div
    class="v-gap-16 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="16"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Submit
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Combobox examples HighlightOnCloseComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples InfiniteScrollComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface"
      v-floating-ui-trigger=""
      v-input-container=""
    >
      <input
        aria-autocomplete="list"
        aria-describedby="infinite-scroll-no-results"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox v-listbox-scroll"
        containheight=""
        customscrollcontrol=""
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        
        <li
          aria-atomic="true"
          aria-live="assertive"
          class="v-align-items-center v-flex v-flex-row v-justify-content-center v-px-7 v-py-10"
          id="infinite-scroll-no-results"
          valignitemscenter=""
          vflex=""
          vjustifycontentcenter=""
          vpx="7"
          vpy="10"
        >
          <p
            class="v-typography-label-large"
            vtypography="label-large"
          >
            No results found
          </p>
        </li>
        
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples ManualAutocompleteComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="manual-autocomplete-no-results"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
        
        
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples ModelDrivenComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox ng-untouched ng-pristine ng-valid"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value="Option A"
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-activedescendant="v-listbox-item-option-a"
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          active=""
          aria-selected="true"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
  <code>
    Label: Option A
  </code>
  <code>
    Value: option-a
  </code>
</div>
`;

exports[`Combobox examples ModelDrivenFbComboboxComponent should render correctly 1`] = `
<div>
  <form
    class="ng-untouched ng-pristine ng-invalid v-gap-16 v-flex v-flex-col"
    novalidate=""
    vflex=""
    vflexcol=""
    vgap="16"
  >
    <div
      aria-invalid="false"
      class="v-combobox ng-untouched ng-pristine ng-invalid"
      formcontrolname="comboboxFormControl"
      style="--v-dropdown-menu-surface-margin-block-start: 0;"
      v-combobox=""
      v-floating-ui-container=""
    >
      <label
        class="v-label"
        for="a-v-input-0"
        id="a-v-label-0"
        v-label=""
      >
        Label
      </label>
      <div
        class="v-input-container v-dropdown v-surface v-my-4"
        v-floating-ui-trigger=""
        v-input-container=""
        vmy="4"
      >
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-invalid="false"
          aria-owns="a-v-floating-ui-element-0"
          class="v-input"
          id="a-v-input-0"
          role="combobox"
          v-input=""
          value=""
        />
        <button
          aria-haspopup="true"
          aria-label="toggle"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-icon v-button-small v-button-tertiary"
          tabindex="-1"
          type="button"
          v-button-icon=""
        >
          <v-icon-visa-toggle
            class="v-icon v-icon-tiny"
            style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
          >
            
            <svg
              aria-hidden="true"
              class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-chevron-down-tiny=""
              v-toggle-default-template=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
            
          </v-icon-visa-toggle>
        </button>
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="default-error-message"
        v-input-message=""
      >
        
      </span>
      <div
        aria-hidden="true"
        class="v-listbox-container"
        id="a-v-floating-ui-element-0"
        role="listbox"
        style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
        v-floating-ui-element=""
        v-listbox-container=""
      >
        <ul
          class="v-listbox"
          id="a-v-listbox-0"
          role="group"
          v-listbox=""
        >
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="v-listbox-item-option-a"
            role="option"
            v-listbox-item=""
            value="option-a"
          >
            <span
              class="v-flex-shrink-0 v-radio"
            />
            Option A
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="v-listbox-item-option-b"
            role="option"
            v-listbox-item=""
            value="option-b"
          >
            <span
              class="v-flex-shrink-0 v-radio"
            />
            Option B
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="v-listbox-item-option-c"
            role="option"
            v-listbox-item=""
            value="option-c"
          >
            <span
              class="v-flex-shrink-0 v-radio"
            />
            Option C
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="v-listbox-item-option-d"
            role="option"
            v-listbox-item=""
            value="option-d"
          >
            <span
              class="v-flex-shrink-0 v-radio"
            />
            Option D
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="v-listbox-item-option-e"
            role="option"
            v-listbox-item=""
            value="option-e"
          >
            <span
              class="v-flex-shrink-0 v-radio"
            />
            Option E
          </li>
        </ul>
      </div>
    </div>
    <div
      class="v-gap-16 v-flex v-flex-row v-mt-12"
      vflex=""
      vgap="16"
      vmt="12"
    >
      <button
        class="v-button"
        type="submit"
        v-button=""
      >
        Submit
      </button>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary"
        type="reset"
        v-button=""
      >
        Reset
      </button>
    </div>
  </form>
  <code>
    Label: 
  </code>
  <code>
    Value: 
  </code>
</div>
`;

exports[`Combobox examples OpenOnSelectComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples ReadOnlyComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
      <span
        class="v-sr"
        id="a-v-label-2"
      >
         (read-only)
      </span>
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        readonly="readonly"
        role="combobox"
        v-input=""
        value="Option"
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        disabled="disabled"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-activedescendant="v-listbox-item-option-a"
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="true"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option
        </li>
      </ul>
    </div>
  </div>
  <div
    class="v-input-container v-mt-8"
    style="container-type: inline-size;"
    v-input-container=""
    vmt="8"
  >
    <input
      checked="checked"
      class="v-checkbox"
      id="readonly-checkbox"
      type="checkbox"
      v-checkbox=""
    />
    <label
      class="v-label"
      for="readonly-checkbox"
      id="a-v-label-1"
      v-label=""
    >
      Mark combobox as read-only
    </label>
    
  </div>
</div>
`;

exports[`Combobox examples ScrollBarComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox v-listbox-scroll"
        containheight=""
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-f"
          role="option"
          v-listbox-item=""
          value="option-f"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option F
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples TemplateDrivenComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox ng-untouched ng-pristine ng-valid"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value="Option B"
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="true"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
  <code>
    Label: Option B
  </code>
  <code>
    Value: option-b
  </code>
  
</div>
`;

exports[`Combobox examples TemplateDrivenProgrammaticSelectionComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox ng-untouched ng-pristine ng-valid"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="template-driven-programmatic-no-results"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value="Option A"
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-activedescendant="v-listbox-item-option-a"
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="true"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        
        
      </ul>
    </div>
  </div>
  <div
    class="v-gap-8 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="8"
    vmt="12"
  >
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Option A
    </button>
    
  </div>
  <button
    class="v-button v-mt-12"
    type="button"
    v-button=""
    vmt="12"
  >
    Reset
  </button>
  <code
    class="v-mt-16"
    vmt="16"
  >
    Label: Option A
  </code>
  <code>
    Value: option-a
  </code>
  
</div>
`;

exports[`Combobox examples WithClearButtonComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="combobox-with-clear"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="combobox-with-clear"
        role="combobox"
        v-input=""
        value="Option"
      />
      
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-activedescendant="v-listbox-item-option-a"
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="true"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples WithInlineLabelComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <div
      class="v-gap-4 v-flex v-flex-row v-flex-wrap"
      vflex=""
      vflexrow=""
      vflexwrap=""
      vgap="4"
    >
      <label
        class="v-label"
        for="a-v-input-0"
        id="a-v-label-0"
        v-label=""
      >
        Label
      </label>
      <div
        class="v-input-container v-dropdown v-surface v-flex-grow v-my-4"
        style="flex-basis: 50%;"
        v-floating-ui-trigger=""
        v-input-container=""
        vflexbasis="50%"
        vflexgrow=""
        vmy="4"
      >
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="a-v-floating-ui-element-0"
          class="v-input"
          id="a-v-input-0"
          role="combobox"
          v-input=""
          value=""
        />
        <button
          aria-haspopup="true"
          aria-label="toggle"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-icon v-button-small v-button-tertiary"
          tabindex="-1"
          type="button"
          v-button-icon=""
        >
          <v-icon-visa-toggle
            class="v-icon v-icon-tiny"
            style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
          >
            
            <svg
              aria-hidden="true"
              class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-chevron-down-tiny=""
              v-toggle-default-template=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
            
          </v-icon-visa-toggle>
        </button>
        
      </div>
      <div
        aria-hidden="true"
        class="v-listbox-container"
        id="a-v-floating-ui-element-0"
        role="listbox"
        style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
        v-floating-ui-element=""
        v-listbox-container=""
      >
        <ul
          class="v-listbox"
          id="a-v-listbox-0"
          role="group"
          v-listbox=""
        >
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="v-listbox-item-option-a"
            role="option"
            v-listbox-item=""
            value="option-a"
          >
            <span
              class="v-flex-shrink-0 v-radio"
            />
            Option A
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="v-listbox-item-option-b"
            role="option"
            v-listbox-item=""
            value="option-b"
          >
            <span
              class="v-flex-shrink-0 v-radio"
            />
            Option B
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="v-listbox-item-option-c"
            role="option"
            v-listbox-item=""
            value="option-c"
          >
            <span
              class="v-flex-shrink-0 v-radio"
            />
            Option C
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="v-listbox-item-option-d"
            role="option"
            v-listbox-item=""
            value="option-d"
          >
            <span
              class="v-flex-shrink-0 v-radio"
            />
            Option D
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="v-listbox-item-option-e"
            role="option"
            v-listbox-item=""
            value="option-e"
          >
            <span
              class="v-flex-shrink-0 v-radio"
            />
            Option E
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Combobox examples WithInlineMessageComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="combobox-inline-message"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <span
      class="v-input-message"
      id="combobox-inline-message"
      v-input-message=""
    >
      This is optional text that describes the label in more detail.
    </span>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples WithLeadingIconComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-search v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-search-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M24 22.4814L22.4814 24L15 16.5186C15.5551 16.0641 16.0641 15.5551 16.5186 15L24 22.4814ZM9 5C11.2056 5 13 6.79443 13 9H11C11 7.89697 10.103 7 9 7V5Z"
        />
        <path
          class="v-icon-primary"
          d="M9 1C13.4111 1 17 4.58887 17 9C17 13.4111 13.4111 17 9 17C4.58887 17 1 13.4111 1 9C1 4.58887 4.58887 1 9 1ZM9 3C5.69141 3 3 5.69141 3 9C3 12.3086 5.69141 15 9 15C12.3086 15 15 12.3086 15 9C15 5.69141 12.3086 3 9 3Z"
        />
      </svg>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples WithSelectedOptionComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value="Option A"
      />
      <button
        aria-haspopup="true"
        aria-label="toggle"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        tabindex="-1"
        type="button"
        v-button-icon=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
      </button>
      
    </div>
    <div
      aria-activedescendant="v-listbox-item-option-a"
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="true"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples WithoutDropdownChevronComboboxComponent should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-combobox=""
    v-floating-ui-container=""
  >
    <label
      class="v-label"
      for="a-v-input-0"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-dropdown v-surface v-my-4"
      v-floating-ui-trigger=""
      v-input-container=""
      vmy="4"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="a-v-floating-ui-element-0"
        class="v-input"
        id="a-v-input-0"
        role="combobox"
        v-input=""
        value=""
      />
      
    </div>
    <div
      aria-hidden="true"
      class="v-listbox-container"
      id="a-v-floating-ui-element-0"
      role="listbox"
      style="position: absolute; top: 0px; left: 0px; display: none; inline-size: 100%; z-index: 200;"
      v-floating-ui-element=""
      v-listbox-container=""
    >
      <ul
        class="v-listbox"
        id="a-v-listbox-0"
        role="group"
        v-listbox=""
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-a"
          role="option"
          v-listbox-item=""
          value="option-a"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option A
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-b"
          role="option"
          v-listbox-item=""
          value="option-b"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-c"
          role="option"
          v-listbox-item=""
          value="option-c"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-d"
          role="option"
          v-listbox-item=""
          value="option-d"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="v-listbox-item-option-e"
          role="option"
          v-listbox-item=""
          value="option-e"
        >
          <span
            class="v-flex-shrink-0 v-radio"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;
